--- a/skills/templates/skills/trainingbit_view.html
+++ b/skills/templates/skills/trainingbit_view.html
@@ -192,110 +192,10 @@
 <h3 class="shared-by-others">Shared by others</h3>
 {% include 'partials/project_list.html' with hide_links=True %}
 
-{# TEMPLATES #}
-<script type="text/template" id="TbPart-template">
-  <div class="input-field-row">
-    <%= content %>
-  </div>
-</script>
+{% include 'skills/partials/trainingbit_parts.html' %}
 
-<script type="text/template" id="text-template">
-  <div class="text-field">
-    <%= html %>
-  </div>
-</script>
-<script type="text/template" id="link-template">
-  <span class="icon large link black"></span><a href="<%= url %>" title="<%= title %>"><%= title %></a>
-</script>
-
-<script type="text/template" id="embed-template">
-  <%= html %>
-</script>
 
 <script>
-
-{# BACKBONE MODELS #}
-TbPart = Backbone.Model.extend({});
-
-TbPartLink = TbPart.extend({
-  defaults: {
-    type: 'link',
-    url: 'http://example.org',
-    title: 'Example dot org'
-  },
-});
-
-TbPartEmbed = TbPart.extend({
-  defaults: {
-    type: 'embed',
-    html: '<embed>',
-  },
-});
-
-TbPartText = TbPart.extend({
-  defaults: {
-    type: 'text',
-    html: '',
-  },
-});
-var TrainingBit = Backbone.Collection.extend({
-  initialize: function(arr) {
-    console.log('Sometinhg is happening');
-    this.parse(arr);
-  },
-  model: TbPart,
-  parse: function (res) {
-    console.log('Parsing');
-    var self = this;
-    _.each(res, function (tb_part) {
-      console.log(tb_part.type);
-      switch(tb_part.type) {
-        case 'link':
-          self.add(new TbPartLink(tb_part));
-          break;
-        case 'embed':
-          self.add(new TbPartEmbed(tb_part));
-          break;
-        case 'text':
-          self.add(new TbPartText(tb_part));
-          break;
-        default:
-          console.log('Unrecognized training bit part');
-      }
-    });
-  }
-});
-
-{# BACKBONE VIEWS #}
-var TrainingBitPartView = Backbone.View.extend({
-
-  initialize: function() {
-    console.log('Initialized partview');
-    this.$el = $(this.el);
-  },
-
-  render: function() {
-
-    console.log('Rendering TrainingBitPart');
-
-    var type = this.model.get('type');
-    console.log('of type: ' + type);
-
-    // Render the content of the TrainingBitPart
-    var content   = _.template($('#' + type + '-template').html(), this.model.toJSON());
-
-    // Render the full view (with help text, drag handle, delete button ...)
-    var TbPart_template =  _.template($('#TbPart-template').html());
-    var rendered = TbPart_template({
-      'content'  : content,
-    });
-
-    this.$el.html(rendered);
-
-    return this;
-  }
-});
-
 var tb = {{ trainingbit.json_content|safe }};
 {# var tb = {{ trainingbit.json_content|escapejs }}; #}
 {# https://docs.djangoproject.com/en/dev/ref/templates/builtins/#escapejs #}
