--- a/scss/_gcl-functions.scss
+++ b/scss/_gcl-functions.scss
@@ -54,3 +54,17 @@
   background: -ms-linear-gradient(top,     $color_start 0%, $color_stop 100%); /* IE10+ */
   background: linear-gradient(to bottom,   $color_start 0%, $color_stop 100%); /* W3C */
 }
+
+// Horizontal + vertical centering
+// Position an element at the center (vertical and horizontal) of its container
+// * assumes that the element has a _specified_ height and width (not dynamic)
+//
+// See: http://coding.smashingmagazine.com/2013/08/09/absolute-horizontal-vertical-centering-css/
+%dead-center {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
