--- a/skills/templates/skills/shares_overview.html
+++ b/skills/templates/skills/shares_overview.html
@@ -11,7 +11,7 @@
   {% include 'partials/project_list.html' %}
 </div>
 <div class="columns medium-6">
-  <h1 class="white-on-red">Latest projects</h1>
+  <h1 class="white-on-red">Latest comments</h1>
 
   <!-- <hr> -->
 
