--- a/scss/app.scss
+++ b/scss/app.scss
@@ -235,6 +235,11 @@ p.skill-description, p.trainingbit-description {
   font-weight: 300;
 }
 
+.date {
+  font-size: 0.85rem;
+  font-weight: 100;
+}
+
 // Or selectively include components
 // @import
 //   "foundation/components/accordion",
