--- a/skills/templates/skills/partials/comment_list.html
+++ b/skills/templates/skills/partials/comment_list.html
@@ -1,10 +1,16 @@
 
-<div id="comment-list">
+<div class="comment-list">
 {% if comments %}
+  <h3>Comments</h3>
 {% for comment in comments %}
   {% include 'skills/partials/comment_entry.html' %}
+  <div class="replies" data-parent-pk="{{ comment.pk }}" data-project-pk="{{ project.pk }}">
+  {% for reply in comment.comment_set.all %}
+    {% include 'skills/partials/comment_entry.html' with comment=reply %}
+  {% endfor %}
+  </div>
 {% endfor %}
 {% else %}
-  <div class="message-missing">No comments yet</div>
+ {# <div class="message-missing">No comments yet</div> #}
 {% endif %}
 </div>
