--- a/global_change_lab/templates/partials/project_entry.html
+++ b/global_change_lab/templates/partials/project_entry.html
@@ -28,6 +28,7 @@
   {% endif %}
 
   {% if not hide_comments %}
+    <h3>Comments</h3>
     {# Comments section #}
     {% include 'skills/partials/comment_list.html' with comments=project.root_comments %}
     <div class="comment-form">
