[Design] Make video embeds smaller

--- a/global_change_lab/templates/partials/project_entry.html
+++ b/global_change_lab/templates/partials/project_entry.html
@@ -24,7 +24,7 @@
   {% endif %}
 
   {% if project.video %}
-    {% video project.video '800x600' %}
+    {% video project.video %}
   {% endif %}
 
   {% if not hide_comments %}
