--- a/scss/trainingbit_cover.scss
+++ b/scss/trainingbit_cover.scss
@@ -32,6 +32,30 @@ $left-margin: rem-calc(40px);
   padding-right: rem-calc(30px);
   border-left: 1px solid $gcl-lightgray;
 
+  .metadata {
+    text-align: center;
+    margin-bottom: 3rem;
+    .icon {
+      font-size: rem-calc(40px);
+      margin-right: rem-calc(5px);
+    }
+    .count {
+      font-size: rem-calc(13px);
+      margin-right: rem-calc(10px);
+    }
+  }
+
+  .author-info {
+    img {
+      float: left;
+      width: rem-calc(45px);
+      margin-right: rem-calc(13px);
+    }
+    .date {
+      font-size: rem-calc(13px);
+    }
+  }
+
   ul {
     font-size: rem-calc(12px);
     line-height: 1.8;
