--- a/skills/templates/skills/trainingbit_edit.html
+++ b/skills/templates/skills/trainingbit_edit.html
@@ -10,7 +10,9 @@
 
 <div class="page-buttons">
   {# View trainingbit button #}
-    <a href="{% url 'skills:trainingbit_cover' trainingbit.id %}" class="button info">View training bit cover</a>
+  {% if trainingbit %}
+  <a href="{% url 'skills:trainingbit_cover' trainingbit.id %}" class="button info">View training bit cover</a>
+  {% endif %}
 </div>
 
 <form id="training-bit-cover-form" action="{{ request.url }}" method="post" enctype="multipart/form-data">
